@@ -4,23 +4,8 @@ local lib               = require "api.lib"
 local trades            = require "api.trades"
 
 return function()
-    storage.trades.productivity_update_jobs = {}
-    storage.trades.trade_collection_jobs = {}
-    storage.trades.trade_filtering_jobs = {}
-    storage.trades.trade_sorting_jobs = {}
-    storage.trades.trade_export_jobs = {}
-    storage.trades.researched_items = {}
-    storage.trades.base_trade_productivity = {}
     storage.hex_grid.flattened_surface_hexes = {}
-
     storage.item_ranks.bronze_rank_bonus_effect = lib.runtime_setting_value "rank-2-effect"
-
-    local penalty = lib.runtime_setting_value "unresearched-penalty"
-    ---@cast penalty number
-
-    storage.trades.unresearched_penalty = penalty
-    trades.recalculate_researched_items()
-    trades.fetch_base_trade_productivity_settings()
 
     -- Index all existing hexes
     for surface_id, _ in pairs(storage.hex_grid.surface_hexes) do
