@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.1
-Date: 17/01/26
+Date: 17/1/26
+  Bugfixes:
+    - Fixed migrations from saves all the way back from 0.4.2 to 1.5.x.
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.0
 Date: 17/1/26
